# CppExercises

./: .gitignore  CMakeLists.txt
3dTest/: CMakeLists.txt
Ex01/: Ex01  Ex01.cpp
Ex01/CMakeListsSolution/: CMakeLists.txt
Ex02/: CMakeLists.txt  main.cpp
Ex03/: plotData.txt
Ex03/Ex03/: CMakeLists.txt
Ex03/Ex03/src/: main.cpp
Ex03/Ex03/src/ui/: ekgwidget.cpp  ekgwidget.h  ekgwidget.ui  widget.cpp  widget.h  widget.ui
Ex03/build-Ex03-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Ex03.ilk  build.ninja  cmake_install.cmake  rules.ninja
Ex03/build-Ex03-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/Ex03_autogen/: mocs_compilation.cpp
Ex03/build-Ex03-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/Ex03_autogen/6JUD6UOVAQ/: moc_qcustomplot.cpp
Ex03/build-Ex03-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/Ex03_autogen/EWIEGA46WW/: moc_widget.cpp
Ex03/build-Ex03-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/Ex03_autogen/YPKJ5OE7LN/: moc_ekgwidget.cpp  moc_widget.cpp
Ex03/build-Ex03-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/Ex03_autogen/include/: ui_ekgwidget.h  ui_widget.h
Ex04/Ex04/: CMakeLists.txt  main.cpp
Ex04/build-Ex04-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Ex04.ilk  build.ninja  cmake_install.cmake  rules.ninja  threadLog.txt
Ex05/: CMakeLists.txt  Ex05.ilk  dataqueue.h  main.cpp
Ex06/Ex06-RaphaelRaetz/: CMakeLists.txt
Ex06/build-producerConsumerPattern-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  PCP.ilk  build.ninja  cmake_install.cmake  rules.ninja
Ex06/build-producerConsumerPattern-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/PCP_autogen/: mocs_compilation.cpp
Ex06/build-producerConsumerPattern-Desktop_Qt_5_15_1_MSVC2019_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
Ex06/producerConsumerPattern/: CMakeLists.txt  README.md
Ex07/build-producerConsumerPattern-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  PCP.ilk  build.ninja  cmake_install.cmake  rules.ninja
Ex07/build-producerConsumerPattern-Desktop_Qt_5_15_1_MSVC2019_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
Ex07/producerConsumerPattern/: CMakeLists.txt
NLopt/: CMakeLists.txt  main.cpp
NLopt/NLopt/include/: .nlopt.hpp.swp
QtConfigs/: Readme.txt
basicshapes-cpp/: .main.cpp.swp  .scenemodifier.cpp.swp  CMakeLists.txt  main.cpp  scenemodifier.cpp
build-Ex05-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
build-basicshapes-cpp-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  basicshapes-cpp.ilk  build.ninja  cmake_install.cmake  rules.ninja
build-basicshapes-cpp-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/basicshapes-cpp_autogen/EWIEGA46WW/: moc_scenemodifier.cpp
build-simple-cpp-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja  simlple-cpp.ilk
build-simple-cpp-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/simlple-cpp_autogen/EWIEGA46WW/: moc_orbittransformcontroller.cpp
demo01/01_Vector/: CMakeLists.txt  main.cpp
demo01/02_Set/: CMakeLists.txt  main.cpp
demo01/03_Map/: CMakeLists.txt  main.cpp
demo01/04_StreamIt/: CMakeLists.txt  main.cpp
demo01/05_lambda/: CMakeLists.txt  main.cpp
demo01/06_readFile/: CMakeLists.txt  main.cpp
demo02/: CMakeLists.txt  main.cpp
demo03/: CMakeLists.txt  main_inclassExample.cpp  solution.cpp
nlopttest/build-nlopttest-Desktop_Qt_5_12_10_GCC_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  try
nlopttest/nlopttest/: CMakeLists.txt  main.cpp
robotArm01/robotArm01/: CMakeLists.txt
robotProject/build-robotProject-Desktop_Qt_5_12_10_GCC_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  robotProject
robotProject/build-robotProject-Desktop_Qt_5_12_10_GCC_64bit-Debug/robotProject_autogen/: moc_predefs.h  mocs_compilation.cpp
robotProject/build-robotProject-Desktop_Qt_5_12_10_GCC_64bit-Release/: CMakeCache.txt  Makefile  cmake_install.cmake  robotProject
robotProject/build-robotProject-Desktop_Qt_5_12_10_GCC_64bit-Release/robotProject_autogen/: moc_predefs.h  mocs_compilation.cpp
robotProject/build-robotProject-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  robotProject.ilk  rules.ninja
robotProject/not used/: controller.h  graphic3dobject.h  inversekinematics.h  timer.h  utils.h
robotProject/robotProject/: CMakeLists.txt  README.txt  controller.cpp  controller.h  coordinatesystem.cpp  coordinatesystem.h  cylinder3d.cpp  cylinder3d.h  eulerinput.cpp  eulerinput.h  inversekinematics.h  joint.cpp  joint.h  jointdisplay.cpp  jointdisplay.h  main.cpp  main.h  robot.cpp  robot.h  robotProject  scenemodifier.cpp  scenemodifier.h  se3.h  spaceTransformations.h  statusmessage.cpp  statusmessage.h  trajectoryplanner.cpp  trajectoryplanner.h  utils.h
robotProject/robotProject/src/: graphics.h  joint.h  main.cpp  robot.h  spaceTransformations.h  utils.h  widget.cpp
robotProject/robotProject/src/gui/: eulerinput.cpp  eulerinput.h  jointdisplay.cpp  jointdisplay.h  statusmessage.cpp  statusmessage.h
robotProject/robotProject/src/robotics/: coordinatesystem.cpp  coordinatesystem.h  cylinder3d.cpp  cylinder3d.h  joint.cpp  joint.h  robot.cpp  robot.h  trajectoryplanner.cpp  trajectoryplanner.h
simple-cpp/: CMakeLists.txt  main.cpp  main.h  orbittransformcontroller.cpp  orbittransformcontroller.h
simple-cpp/build-simple-cpp-Desktop_Qt_5_12_10_GCC_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  simple-cpp
simple-cpp/build-simple-cpp-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja  simple-cpp.ilk
simple-cpp/simple-cpp/: CMakeLists.txt  controller.cpp  controller.h  main.cpp  main.cpp.autosave  main.h
tmp/: basicshapes-cpp.pro
(+225 files in other folders)
